# poetry-plugin-package-info

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
poetry_plugin_package_info/: plugin.py
poetry_plugin_package_info/generators/: git.py  project.py
tests/: conftest.py  helpers.py  test_plugin.py
tests/fixtures/git-project-detached-head/: README.rst  pyproject.toml
tests/fixtures/git-project-detached-head/_git/: COMMIT_EDITMSG  HEAD  index
tests/fixtures/git-project-detached-head/_git/logs/: HEAD
tests/fixtures/git-project-detached-head/git_project_detached_head/: package_info.py.expected
tests/fixtures/git-project-empty/: pyproject.toml
tests/fixtures/git-project-empty/git_project_empty/: package_info.py.expected
tests/fixtures/git-project-no-changes/: pyproject.toml
tests/fixtures/git-project-no-changes/git_project_no_changes/: package_info.py.expected
tests/fixtures/git-project-staged-changes/: pyproject.toml
tests/fixtures/git-project-staged-changes/_git/: COMMIT_EDITMSG  index
tests/fixtures/git-project-staged-changes/git_project_staged_changes/: __init__.py  package_info.py.expected
tests/fixtures/git-project-unstaged-changes/: pyproject.toml
tests/fixtures/git-project-unstaged-changes/_git/: COMMIT_EDITMSG  index
tests/fixtures/git-project-unstaged-changes/git_project_unstaged_changes/: __init__.py  package_info.py.expected
tests/fixtures/git-project-untracked-changes/: _gitignore  pyproject.toml
tests/fixtures/git-project-untracked-changes/_git/: COMMIT_EDITMSG  index
tests/fixtures/git-project-untracked-changes/git_project_untracked_changes/: package_info.py.expected
tests/fixtures/git-project-with-config/: my_package_info.py.expected  pyproject.toml
tests/fixtures/git-project-with-config/_git/: COMMIT_EDITMSG  index
tests/fixtures/git-project-with-config/_git/logs/refs/heads/: main
tests/fixtures/git-project-with-config/_git/refs/heads/: main
tests/fixtures/simple-project/: pyproject.toml
(+8 files in other folders)
